<resources>
	<string name="app">SM Calendar</string>
	<string name="app_name">SM Calendar</string>
	<string name="app_sdpathnormal">smcalendar</string>
	<string name="app_sdpathlite">smcalendarlite</string>
    <string name="hello">Welcome, SM Calendar.\nPlease check notices.</string>
	<string name="no_data">Not a registered data.</string>
	<string name="copy_prefix"> Copy</string>
	<string name="charcnt">0/400byte</string>
	<string name="title_user">User Management</string>
	<string name="user">User</string>
	<string name="no_user">Not a registered user.</string>
    <string name="username"	>User Name</string>
    <string name="defaultuser">Default User</string>
    <string name="title_schedule">Schedule Management</string>
	<string name="no_schedule">Not a registered schedule.</string>
	<string name="title_allschedule">Full Schedule</string>
    <string name="isempty">No Title</string>
    <string name="title_specialday">Anniversary Management</string>
    <string name="title_allspecialday">Full Anniversary</string>
	<string name="no_specialday">Not a registered anniversary.</string>
    <string name="title_todo">Todo Manager</string>
	<string name="no_todo">Not a registered memo.</string>
	<string name="title_dayschedule">Day Schedule</string>
	<string name="title_weekschedule">Week Schedule</string>
	<string name="calendar">Calendar</string>
	<string name="lunarcalendar">Lunar Calendar</string>
	<string name="kakaotalk">KakaoTalk</string>
	<string name="evernote"	>EverNote</string>
	<string name="title_sms">SMS</string>
	<string name="sms"		>SMS</string>
	<string name="whosschedule">s Schedule</string>
	<string name="title_more">more</string>
	<string name="title_getotherschedule">Import Schedule</string>
	<string name="title_sendotherschedule">Export Schedule</string>
	<string name="preference">Preference</string>
	<string name="information">Information</string>
    <string name="register"		>Register</string>
    <string name="confirm"		>Confirm</string>
    <string name="add"			>Add</string>
    <string name="modify"		>Edit</string>
    <string name="copy"			>Copy</string>
    <string name="delete"		>Delete</string>
    <string name="cancel"		>Cancel</string>
    <string name="share"		>Share..</string>
    <string name="send"			>Export</string>
	<string name="get"			>Import</string>
	<string name="allget"		>Full\nImport</string>
	<string name="choiceget"	>Select\nImport</string>
	<string name="getotherschedule"	>● %1$s >> SM Calendar</string>
	<string name="sendotherschedule">● SM Calendar >> %1$s</string>
    <string name="todayschedule">Today Schedule</string>
    <string name="menu_specialday_add"	>Anniversary</string>
    <string name="menu_todo_add" 		>Todo</string>
    <string name="menu_schedule_add" 	>Schedule</string>
    <string name="menu_schedule_day" 	>Day</string>
    <string name="menu_weekschedule" 	>Week</string>
    <string name="inputcheck">Required</string>
    <string name="info"		>Info</string>
    <string name="warning"	>Warning</string>
    <string name="errer"	>Error</string>
    <string name="hint_memo">Enter Description(Max 3 Lines)</string>
    <string name="hint_text">Enter Contents(Max 20 letter)</string>
    <string name="hint_text_long">Enter Contents(Max 100 letter)</string>
    <string name="name">Name</string>
    <string name="relation">Relation</string>
    <string name="color">Style</string>
    <string name="address">Address</string>
    <string name="memo">Description</string>
    <string name="content">Contents</string>
    <string name="birthdate">Birthday</string>
    <string name="schedulename">Contents</string>
    <string name="period">Period</string>
    <string name="time">Time</string>
    <string name="alarm">Alarm</string>
    <string name="starttime">Start schedule</string>
    <string name="endtime">End schedule</string>
    <string name="phone">Phone</string>
    <string name="cost">Cost</string>
    <string name="more">More</string>
    <string name="list">List</string>
    <string name="table">Table</string>
    <string name="count">Number</string>
    <string name="termyn">Time limit</string>
    <string name="finishterm">Set a term</string>
    <string name="finish">Finish</string>
    <string name="todoend">Finish</string>
    <string name="all">All</string>
    <string name="latest">Latest</string>
    <string name="previous">Previous</string>
	<string name="googlelogin">Google Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="anniversaryday">Anniversary</string>
    <string name="birthday">Birth day</string>
    <string name="weddingday">Wedding Day</string>
    <string name="deathday">Death Day</string>
	<string name="exist_termyn">In period</string>
	<string name="notexist_termyn">No date</string>
	<string name="repeat">Repeat</string>
	<string name="no_repeat">No repeat</string>
	<string name="err_gubun">Separated Value Error</string>
	<string name="err_nouser">Not a registered user.</string>
	<string name="err_schedulename">Schedule name</string>
	<string name="err_user">User</string>
	<string name="err_specialdayname">Anniversary name</string>
	<string name="err_name">name</string>
	<string name="err_memo">description</string>
	<string name="err_phone">phone</string>
	<string name="err_style">style</string>
	<string name="err_email">Enter the e-mail, or it would not have entered. Again </string>
	<string name="err_password">Password</string>
	<string name="err_date">Bad date or time schedule can not be imported.</string>
	<string name="err_birthday">Faster than today s date of birth was entered. Again</string>
	<string name="err_mustweekcheck">Select a repeating schedule, will be required of the week. Again</string>
	<string name="err_enddate">Start date to a date earlier than the schedule end date has been entered. Again</string>
	<string name="err_endtime">Start time, end time is entered in less time. Again</string>
	<string name="err_not_existfile">SD card backup file does not exist.</string>
	<string name="err_not_existfilelite">SD card lite backup file does not exist 
	    				\nor does not exist Lite applications.</string>
	<string name="err_not_existsdcard">SD card does not exist or 
						\nWrite-protected file you requested has stopped working</string>
	<string name="err_not_existsdcard2">SD card does not exist or 
						\nRead-protected file you requested has stopped working</string>
	<string name="err_not_kakaotalk">KakaoTalk does not exist</string>
	<string name="err_not_evernote">EverNote does not exist</string>
	<string name="err_httpconnection">The network connection was aborted does not facilitate.\nPlease restart after checking.</string>
	<string name="err_unknown">The network connection was aborted does not facilitate.(%1$s).\nPlease restart after checking.</string>
	<string name="err_notvaliddata">There is a schedule that can be imported.</string>
	<string name="err_batchholiday">Anniversary are not reflected.\n(Please contact the developer)</string>
	<string name="err_period">Weekly, monthly schedule start date, end date, the same can not be registered to date. Again</string>
	<string name="holiday"	>Holiday</string>
	<string name="schedule"	>Schedule</string>
	<string name="specialday">Anniversary</string>
	<string name="todo">Todo</string>
	<string name="sunday"	>Sun</string>
	<string name="monday"	>Mon</string>
	<string name="tuesday"	>Tue</string>
	<string name="wednesday">Wed</string>
	<string name="thursday"	>Thu</string>
	<string name="friday"	>Fri</string>
	<string name="saturday"	>Sat</string>
	<string name="year"	>Year</string>
	<string name="month">Month</string>
	<string name="day"	>Day</string>
	<string name="hour"	>Hour</string>
	<string name="minite">Minite</string>
	<string name="second">Second</string>
	<string name="dayofweek">Day of week</string>
	<string name="week">Week</string>
	<string name="today"	>Today</string>
	<string name="everyyear">Every year</string>
	<string name="everymonth">Every month</string>
	<string name="everyweek">Every week</string>
	<string name="onetime"	>Only once</string>
	<string name="allday"	>All Day</string>
	<string name="am"	>AM</string>
	<string name="pm"	>PM</string>
	<string name="to"	>To</string>
	<string name="perweek">per week</string>
	<string name="pos"	>th</string>
	<string name="sound">Sound</string>
	<string name="vibration">Vibration</string>
	<string name="sound_vibmix">Sound+Vibration</string>
	<string name="yun">Yun</string>
	<string name="info_httpconnection">Network Connectioning..</string>
    <string name="info_createdatabase">Downloading the data\nPlease wait..\n(first run only when performed)</string>
    <string name="info_installcancel">Has been discontinued.</string>
    <string name="info_batchholiday">Anniversary is being reflected.\nPlease wait..</string>
    <string name="info_batchlunar">Lunar calendar is being reflected.\nPlease wait..</string>
    <string name="info_backup">SD card data is being backed up.\nPlease wait..</string>
    <string name="info_backup_end">SD card data backup has been completed.</string>
    <string name="info_restore">Data is being restore.\nPlease wait..</string>
    <string name="info_restore_end">Data restore is complete.</string>
    <string name="info_restorefromlite">Importing Lite data.\nPlease wait..</string>
    <string name="info_restorefromlite_end">Lite to import data has been completed.</string>
    <string name="msg_inputcheck"	>Please enter the %1$s.</string>
    <string name="msg_notselected">Information is not selected.</string>
	<string name="msg_deleteconfirm">Are you sure you want to delete? </string>
    <string name="msg_deletecomplete">Has been Deleted.</string>
    <string name="msg_savecomplete">Has been Saved.</string>
    <string name="pre_category_basic">General</string>
     <string name="pre_notice">Notice</string>
     <string name="pre_version">Version Information</string>
     <string name="pre_version_summary">You can find out which version of the application.</string>
     <string name="pre_language">Language</string>
     <string name="pre_holiday">National holidays</string>
    <string name="pre_category_conservation">Backup and Restore</string>
    	<string name="pre_sub_sdbackup">Backup to SDCard</string>
    	<string name="pre_sdbackup_summary">If you click you can backup the data to the SD card.
    									However, the existing backup data will be deleted.</string>
    	<string name="pre_sub_sdrestore">Restore from SDCard</string>
    	<string name="pre_sdrestore_summary">If you click you can restore the data.
    									 However, the registered data are deleted.</string>
      <string name="pre_category_synchronization">Share</string>
     	 <string name="pre_sub_getcalendar">Import calendar</string>
		 <string name="pre_getcalendar_summary">Other calendar schedule can be copied to the SM Calendar.</string>
     <string name="pre_category_alarm">Alarm</string>
    	<string name="pre_sub_alarmset">Alarm Mode</string>
		<string name="pre_alarmset_summary">You can select the alarm mode (sound, vibration)</string>
		<string name="pre_sub_alarmtime">The default alarm time</string>
		<string name="pre_alarmtime_summary">You can select the default alarm time (Anniversary,To-do)</string>
     <string name="pre_category_view">View Control</string>
    	<string name="pre_sub_fullcalendar">Full Calendar</string>
		<string name="pre_fullcalendar_summary">Previously, the view includes the following month, and decide whether you can view this month.</string>
    	<string name="pre_sub_widgetback">Widget background</string>
		<string name="pre_widgetback_summary">The background of desktop widgets you can choose.\n
								 Style of the background color (font color) are in (default: translucent gray (white))</string>
 	<string name="alarm_description">(Enter the alarm time basis can register)</string>
</resources>