<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
 
 <!-- 
   <item
        android:id="@+id/menu_schedule_new"
        android:title="@string/add"/> 
 -->        
   <item
        android:id="@+id/menu_schedule_modify"
        android:title="@string/modify" /> 
   <item
        android:id="@+id/menu_schedule_copy"
        android:title="@string/copy"/>
   <item
        android:id="@+id/menu_schedule_delete"
        android:title="@string/delete"/>  
   <item
        android:id="@+id/menu_share"
        android:title="@string/share">
        <menu
        	android:icon="@drawable/sm_menu_more">
	        <item
	        android:id="@+id/menu_kakaotalk"
	        android:title="@string/kakaotalk"/> 
	        <item
	        android:id="@+id/menu_evernote"
	        android:title="@string/evernote"/>   	         
	        <item
	        android:id="@+id/menu_sms"
	        android:title="@string/sms"/>   
	    </menu>  
   </item>              	     	      	   	
</menu>
