<?xml version="1.0" encoding="utf-8"?>
<!-- calendar home menu--> 
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">

   <item
        android:id="@+id/menu_notice"
        android:title="@string/pre_notice"
       	android:icon="@drawable/sm_menu_notice" />        
   <item
        android:id="@+id/menu_preference"
        android:title="@string/preference"
       	android:icon="@drawable/sm_menu_preferences" />    		         	       		
   <item
        android:id="@+id/menu_shedule_userlist"
        android:title="@string/title_allschedule"
       	android:icon="@drawable/sm_menu_allschedule" /> 
   <item
        android:id="@+id/menu_specialday_allliset"
        android:title="@string/title_allspecialday"
       	android:icon="@drawable/sm_menu_allschedule" />       	
   <item
        android:id="@+id/menu_week"
        android:title="@string/title_weekschedule"
       	android:icon="@drawable/sm_menu_dayofweek" />     	      	     	      	   	
</menu>
