<?xml version="1.0" encoding="utf-8"?>
<!--  스케줄관리 (등록,수정,삭제)  -->
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/sm_background" 
  android:id="@+id/viewroot" 
  android:orientation="vertical" >
    <!--  공통 title : 고정 -->
	<include 
	  android:layout_width="fill_parent" 
	  layout="@layout/common_top" />   
    <!--  공통 menu: 고정 -->
	<include 
	  android:layout_width="fill_parent" 
	  layout="@layout/common_menu"/>   
 
	<ScrollView
	  android:layout_height="fill_parent"  
	  android:layout_width="fill_parent" 
	  android:layout_weight="1"
	  android:drawSelectorOnTop="false" 
	  android:cacheColorHint="#00000000">	    
	<LinearLayout
	  style="@style/sm_background"
	  android:orientation="vertical" > 
	    <LinearLayout 
	    	style="@style/sm_linear" 
	    	android:id="@+id/lin_name"    
	    	android:orientation="vertical">
	        <TextView 	
	        style="@style/sm_textview"
	        android:text="@string/schedulename" 
	        android:id="@+id/tv_name" />
	        <EditText 
	        style="@style/sm_edittext_long"
	        android:id="@+id/name"         
	        android:hint="@string/hint_text_long"
	        android:maxLength="100"/>
	    </LinearLayout>	 
	    <LinearLayout 
	    	style="@style/sm_line" 
	    	android:id="@+id/lin_line"    
	    	android:orientation="vertical"/>		    
	    <LinearLayout 
	    	style="@style/sm_linear" 
	    	android:id="@+id/lin_user"    
	    	android:orientation="vertical">
	    	<TextView 	
	        style="@style/sm_textview"
	        android:text="@string/user" 
	        android:id="@+id/tv_name"/>
	    </LinearLayout>	
		<LinearLayout 
	    	style="@style/sm_linear" 
	    	android:id="@+id/lin_user"    
	    	android:orientation="horizontal">
	        <Spinner 
	        style="@style/sm_spinner"
	        android:id="@+id/userspinner"/>
	        <ImageButton 
	        style="@style/sm_textview"
	        android:id="@+id/btn_add"
	        android:src="@drawable/sm_userlist"
	        android:adjustViewBounds="true"
	        android:layout_gravity="center"/>
	    </LinearLayout>	 
	    <LinearLayout 
	    	style="@style/sm_line" 
	    	android:id="@+id/lin_line"    
	    	android:orientation="vertical"/>		    
	    <RelativeLayout 
	    	style="@style/sm_linear" 
	    	android:id="@+id/lin_cycle"    
	    	android:orientation="horizontal">
	        <RadioGroup
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/cycle"
	        android:orientation="horizontal" 
	        android:checkedButton="@+id/onetime">	
		      	<RadioButton 
		      	android:id="@+id/onetime" 
		      	android:layout_width="wrap_content" 
		      	android:layout_height="wrap_content"
		      	android:text="@string/onetime" 
				android:checked="true"
				android:layout_weight="1"/>   
				<RadioButton 
				android:id="@+id/everyweek" 
				android:layout_width="wrap_content"  
				android:layout_height="wrap_content"
				android:text="@string/everyweek" 
		      	android:layout_marginLeft="20dip"
				android:layout_weight="1"/>	
				<RadioButton 
				android:id="@+id/everymonth" 
				android:layout_width="wrap_content"  
				android:layout_height="wrap_content"
				android:text="@string/everymonth" 
		      	android:layout_marginLeft="20dip"
				android:layout_weight="1"/>			      		      	
	        </RadioGroup> 
		    <LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/lin_dayofweek"
		    android:orientation="horizontal"
		    android:layout_below="@+id/cycle"> 
		        <ToggleButton 
				style="@style/sm_togglebtn" 
		        android:id="@+id/sunday" 
		        android:textOn="@string/sunday"
		        android:textOff="@string/sunday"/> 		        
		        <ToggleButton 
				style="@style/sm_togglebtn" 
		        android:id="@+id/monday" 
		        android:textOn="@string/monday"
		        android:textOff="@string/monday"/>
		        <ToggleButton 
		        style="@style/sm_togglebtn" 
		        android:id="@+id/tuesday" 
		       	android:textOn="@string/tuesday"
		        android:textOff="@string/tuesday"/>
		        <ToggleButton 
				style="@style/sm_togglebtn" 
		        android:id="@+id/wednesday"
		        android:textOn="@string/wednesday"
		        android:textOff="@string/wednesday"/>
		        <ToggleButton 
				style="@style/sm_togglebtn" 
		        android:id="@+id/thursday"
		        android:textOn="@string/thursday"
		        android:textOff="@string/thursday"/> 
		      	<ToggleButton 
				style="@style/sm_togglebtn" 
		        android:id="@+id/friday"
				android:textOn="@string/friday"
		        android:textOff="@string/friday"/>
		        <ToggleButton 
		        style="@style/sm_togglebtn" 
		        android:id="@+id/saturday" 
		        android:textOn="@string/saturday"
		        android:textOff="@string/saturday"/> 		    	        
		    </LinearLayout>	
		    <LinearLayout 		    
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/lin_repeatdate"
		    android:orientation="horizontal"
		    android:layout_below="@+id/cycle"> 		
			    <Spinner 
		        style="@style/sm_spinner"
		        android:id="@+id/repeatdateSpinner"
		        android:clipToPadding="false"/>	 
		    </LinearLayout>	  
	    </RelativeLayout> 

	    <LinearLayout 
	    	style="@style/sm_line" 
	    	android:id="@+id/lin_line"    
	    	android:orientation="vertical"/>	
	    <RelativeLayout 
	    style="@style/sm_linear2"
	    android:id="@+id/lin_date" 
	    android:orientation="vertical">
	        <TextView 
	        style="@style/sm_textview"
	        android:text="@string/period"
	        android:id="@+id/tv_date" >
	        </TextView> 
	        <Button 
	        style="@style/sm_edittext_date"
	        android:id="@+id/startdate" 
	        android:text=""
	        android:layout_below="@+id/tv_date"/>
	        <TextView 
	        android:text="~" 
	        android:id="@+id/tv_dategubun" 
	        android:textSize="@dimen/txSize_textview"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_below="@+id/tv_date"
	        android:layout_toRightOf="@+id/startdate"/>
	        <Button 
	        android:id="@+id/enddate" 
	        style="@style/sm_edittext_date" 
	        android:text=""
	        android:layout_below="@+id/tv_date"
	        android:layout_toRightOf="@+id/tv_dategubun"/>	
	        <TextView 
	        style="@style/sm_textview"
	        android:text="@string/time"
	        android:id="@+id/tv_time"
	        android:layout_below="@+id/startdate" >
	        </TextView> 	        		        
	        <Button 
	        style="@style/sm_edittext_date" 
	        android:id="@+id/starttime" 
	        android:text=""
	        android:layout_below="@+id/tv_time"/>
	        <TextView 
	        android:text="~" 
	        android:id="@+id/tv_timegubun" 
	        android:textSize="@dimen/txSize_textview"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_below="@+id/tv_time"
	        android:layout_toRightOf="@+id/starttime"/>
	        <Button 
	        android:id="@+id/endtime" 
	        style="@style/sm_edittext_date" 
	        android:text=""
	        android:layout_below="@+id/tv_time"
	        android:layout_toRightOf="@+id/tv_timegubun"/>	 
	        <CheckBox 
			style="@style/sm_checkbox"
	        android:id="@+id/alldayyn"         
	        android:text="@string/allday"
	        android:clickable="true"
	        android:focusable="true"
	        android:layout_below="@+id/starttime"/>		
               
	    </RelativeLayout> 
	    <LinearLayout 
	    	style="@style/sm_line" 
	    	android:id="@+id/lin_line"    
	    	android:orientation="vertical"/>		    
	    <LinearLayout 
	    	style="@style/sm_linear" 
	    	android:id="@+id/lin_alarm"    
	    	android:orientation="vertical">
	        <TextView 	
	        style="@style/sm_textview"
	        android:text="@string/alarm" 
	        android:id="@+id/tv_alarm" />
	        <TextView 	
	        style="@style/sm_textview"
	        android:text="@string/alarm_description" 
	        android:id="@+id/tv_alarmdescription" 
	        android:textSize="11dip"
	        android:textColor="@color/gray"/>	        
		    <LinearLayout 
		    	style="@style/sm_linear" 
		    	android:id="@+id/lin_alarm1"    
		    	android:orientation="horizontal">	
		    		<TextView 	
			        style="@style/sm_textview"
			        android:layout_width="80dip"
			        android:text="@string/starttime" 
			        android:id="@+id/tv_starttime" />        
			        <Spinner 
			        style="@style/sm_spinner"
			        android:layout_width="160dip"
			        android:id="@+id/alarmSpinner" 
			        android:clipToPadding="false"/>        
	    	</LinearLayout>
		    <LinearLayout 
		    	style="@style/sm_linear" 
		    	android:id="@+id/lin_alarm2"    
		    	android:orientation="horizontal">
			        <TextView 	
			        style="@style/sm_textview"
			        android:layout_width="80dip"
			        android:text="@string/endtime" 
			        android:id="@+id/tv_endtime" />
			        <Spinner 
			        style="@style/sm_spinner"
			        android:layout_width="160dip"
			        android:id="@+id/alarmSpinner2" 
			        android:clipToPadding="false"/>		        
	    	</LinearLayout>	    	
	    </LinearLayout>	    
	    <LinearLayout 
	    	style="@style/sm_line" 
	    	android:id="@+id/lin_line"    
	    	android:orientation="vertical"/>		    	
	    <RelativeLayout 
	    	style="@style/sm_linear" 
	    	android:id="@+id/lin_tel1"    
	    	android:orientation="vertical">
	        <TextView 	
	        style="@style/sm_textview"
	        android:text="@string/phone" 
	        android:id="@+id/tv_tel1">
	        </TextView>
	        <TextView 	
	        style="@style/sm_textview"
	        android:text="" 
	        android:id="@+id/tv_telname"
	        android:layout_toRightOf="@+id/tv_tel1" /> 	        
	        <EditText 
	        style="@style/sm_edittext2"
	        android:id="@+id/tel1"         
	        android:text=""
	        android:maxLength="20"
			android:phoneNumber="true" 
			android:inputType="phone"
			android:layout_below="@+id/tv_tel1"/>
	        <ImageButton 
	        style="@style/sm_textview"
	        android:adjustViewBounds="true"
	        android:id="@+id/btn_contact" 
	        android:src="@drawable/sm_phone_contact"
	        android:layout_below="@+id/tv_tel1"
	        android:layout_toRightOf="@+id/tel1"/>		

	        <ImageButton 
	        style="@style/sm_textview"
	        android:id="@+id/btn_call" 
			android:src="@drawable/sm_phone_call"
	        android:adjustViewBounds="true"
	        android:layout_below="@+id/tv_tel1"
	        android:layout_toRightOf="@+id/btn_contact"/>
       
	        <!--  		
	 		<Button 
	        style="@style/sm_btn" 
			android:layout_marginLeft="@dimen/margin_basic"
	        android:id="@+id/btn_call" 
	        android:text="call"
	        android:textSize="12dip"
	        android:layout_width="60dip"
	        android:layout_below="@+id/tv_tel1"
	        android:layout_toRightOf="@+id/btn_contact"/>
	        -->				
	    </RelativeLayout>	
	    <LinearLayout 
	    	style="@style/sm_line" 
	    	android:id="@+id/lin_line"    
	    	android:orientation="vertical"/>	        
    	<LinearLayout 
	    	style="@style/sm_linear" 
	    	android:id="@+id/lin_cost"    
	    	android:orientation="vertical">
	        <TextView 	
	        style="@style/sm_textview"
	        android:text="@string/cost" 
	        android:id="@+id/tv_cost" >
	        </TextView>
	        <EditText 
	        style="@style/sm_edittext"
	        android:id="@+id/cost"         
	        android:text=""
	        android:maxLength="20" 
			android:numeric="integer|signed" 
			android:inputType="number"/>
	    </LinearLayout>	
	    <LinearLayout 
	    	style="@style/sm_line" 
	    	android:id="@+id/lin_line"    
	    	android:orientation="vertical"/>	       
    	<LinearLayout 
	    	style="@style/sm_linear" 
	    	android:id="@+id/lin_memo"    
	    	android:orientation="vertical">
	        <TextView 	
	        style="@style/sm_textview"
	        android:text="@string/memo" 
	        android:id="@+id/tv_memo"/>
	        <EditText 
	        style="@style/sm_edittext_memo"
	        android:id="@+id/memo"         
	        android:hint="@string/hint_memo" />
	    </LinearLayout>	
 	</LinearLayout> 
	</ScrollView> 
	
	<!--  footer  -->	
    <LinearLayout 
    style="@style/sm_footeLin"
    android:id="@+id/lin_new"
    android:orientation="horizontal"
    android:layout_weight="0">
        <Button 
		style="@style/sm_btn" 
		android:layout_marginLeft="@dimen/margin_basic"
        android:id="@+id/confirm" 
        android:text="@string/register"/>
        <Button 
        style="@style/sm_btn" 
        android:id="@+id/cancel" 
        android:text="@string/cancel"/>
    </LinearLayout>
 
</LinearLayout>
